--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ openai==1.14.2
 python-dotenv
 python-telegram-bot==20.7
 requests
-pyGithub
-pyTelegramBotAPI
+pyGithub==1.59.0
+pyTelegramBotAPI==4.12.0
